--- a/dir/style/style.scss
+++ b/dir/style/style.scss
@@ -3,6 +3,7 @@ $open-sans: 'Open Sans', serif;
 $white: white;
 $light-weight: 300;
 $bold-weight: 700;
+$gray: #ababab;
 
 %wrapper {
     max-width: 1600px;
@@ -11,43 +12,54 @@ $bold-weight: 700;
 
 .header {
 position: relative;
-// background: rgba(53,148,46,1);
-// background: -moz-linear-gradient(45deg, rgba(53,148,46,1) 0%, rgba(39,42,21,1) 100%);
-// background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(53,148,46,1)), color-stop(100%, rgba(39,42,21,1)));
-// background: -webkit-linear-gradient(45deg, rgba(53,148,46,1) 0%, rgba(39,42,21,1) 100%);
-// background: -o-linear-gradient(45deg, rgba(53,148,46,1) 0%, rgba(39,42,21,1) 100%);
-// background: -ms-linear-gradient(45deg, rgba(53,148,46,1) 0%, rgba(39,42,21,1) 100%);
-// background: linear-gradient(45deg, rgba(53,148,46,1) 0%, rgba(39,42,21,1) 100%);
-// height: 550px;
 background-image: url(../images/logo-back.jpg);
 background-repeat: no-repeat;
+background-size: cover;
+padding-bottom: 150px;
+}
+
+.flex-wrap {
+    @extend %wrapper;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .flex-header {
-    @extend %wrapper;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 50px 0;
-}
+    justify-content: flex-start;
+    width: 924px;
+    padding: 50px 0 25px 0;
 
-.flex-header-item {
-    h1 {
+    &-logo {
+        margin-right: 65px;
+        align-self: center;
+        
+        a img {
+            width: 60px;
+        }
+    }
+    
+    &-title {
+        h1 {
+        width: 400px;
         font-family: $roboto;
-        letter-spacing: 0.5px;
-        font-size: 42px;
+        letter-spacing: 5.5px;
+        font-size: 45px;
         color: $white;
+        }
+        
     }
 
-    a img {
-        width: 60px;
-    }
 }
+
+
 
 .toolbar {
     background-color:#111;
-    opacity: 0.8;
+    opacity: 0.6;
     padding: 10px 0;
+    transition: 0.2s;
 
     &:hover {
         opacity: 1;
@@ -59,6 +71,7 @@ background-repeat: no-repeat;
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    opacity: 1;
         &-item {
             display: flex;
             align-items: center;
@@ -73,9 +86,13 @@ background-repeat: no-repeat;
             letter-spacing: 1px;
             text-decoration: none;
 
-            &:hover, &:visited {
+            &:hover {
                 text-decoration: underline;
                 cursor: pointer;
+                color: $white;
+            }
+
+            &:visited {
                 color: $white;
             }
 
@@ -113,14 +130,33 @@ background-repeat: no-repeat;
 }
 
 .additional-info {
-    margin: 67px auto 0 auto;
+    position: relative;
     max-width: 600px;
+    height: 200px;
 
     &__text {
+        margin-bottom: 44px;
         font-family: $roboto;
-        line-height: 30px;
-        text-align: justify;
-        font-size: 16px;
+        line-height: 38px;
+        font-size: 22px;
         color: $white;
+    }
+
+    &__more {
+        border: 4px solid transparent; 
+        padding: 15px 15px 15px 0;
+        font-family: $roboto;
+        font-weight: $bold-weight; 
+        font-size: 18px;
+        text-decoration: none;
+        color: $white;
+        transition: 0.3s;
+        z-index: 1;
+
+        &:hover {
+            border: 4px solid $white;
+            cursor: pointer;
+            padding: 15px 15px;
+        }
     }
 }
