--- a/dir/style/style.css
+++ b/dir/style/style.css
@@ -3,11 +3,28 @@
   margin: 0 auto;
 }
 
+.additional-info__more, .nav-buttons__rand, .nav-buttons__timer {
+  border: 4px solid transparent;
+  background-color: transparent;
+  padding: 15px 15px 15px 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  text-decoration: none;
+  color: white;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
 .header {
   position: relative;
   background-image: url(../images/logo-back.jpg);
   background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   background-size: cover;
+  -webkit-box-shadow: 0 0 0 353px rgba(0, 0, 0, 0.45) inset;
+          box-shadow: 0 0 0 353px rgba(0, 0, 0, 0.45) inset;
   padding-bottom: 150px;
 }
 
@@ -18,6 +35,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .flex-wrap .flex-header-wrap {
@@ -65,15 +85,16 @@
 }
 
 .toolbar {
-  background-color: #111;
-  opacity: 0.6;
+  position: static;
+  background-color: transparent;
   padding: 10px 0;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+  z-index: 0;
 }
 
 .toolbar:hover {
-  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.55);
 }
 
 .toolbar .flex-toolbar {
@@ -86,7 +107,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  opacity: 1;
 }
 
 .toolbar .flex-toolbar-item {
@@ -109,7 +129,6 @@
 }
 
 .toolbar .flex-toolbar-number a:hover, .toolbar .flex-toolbar-email a:hover {
-  text-decoration: underline;
   cursor: pointer;
   color: white;
 }
@@ -149,26 +168,39 @@
   margin-bottom: 44px;
   font-family: "Roboto", sans-serif;
   line-height: 38px;
+  font-weight: 300;
   font-size: 22px;
   color: white;
-}
-
-.additional-info__more {
-  border: 4px solid transparent;
-  padding: 15px 15px 15px 0;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  text-decoration: none;
-  color: white;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  z-index: 1;
 }
 
 .additional-info__more:hover {
   border: 4px solid white;
   cursor: pointer;
   padding: 15px 15px;
+}
+
+.nav-buttons {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin: 0 auto;
+}
+
+.nav-buttons__rand, .nav-buttons__timer {
+  display: block;
+  border: 4px solid rgba(255, 255, 255, 0.65);
+  padding: 27px 37px;
+  margin-bottom: 40px;
+  font-size: 40px;
+  color: rgba(255, 255, 255, 0.65);
+}
+
+.nav-buttons__rand:hover, .nav-buttons__timer:hover {
+  border: 4px solid white;
+  color: white;
+  cursor: pointer;
+}
+
+.nav-buttons__timer {
+  padding: 27px 95px;
 }
 /*# sourceMappingURL=style.css.map */
