--- a/dir/style/style.scss
+++ b/dir/style/style.scss
@@ -10,11 +10,26 @@ $gray: #ababab;
     margin: 0 auto;
 }
 
+%header-buttons {
+    border: 4px solid transparent;
+    background-color: transparent; 
+    padding: 15px 15px 15px 0;
+    font-family: $roboto;
+    font-weight: $bold-weight; 
+    font-size: 20px;
+    text-decoration: none;
+    color: $white;
+    transition: 0.3s;
+}
+
 .header {
 position: relative;
 background-image: url(../images/logo-back.jpg);
 background-repeat: no-repeat;
+background-position: center center;
+background-attachment: fixed;
 background-size: cover;
+box-shadow:0 0 0 353px rgba(0, 0, 0, 0.45) inset;
 padding-bottom: 150px;
 }
 
@@ -22,6 +37,7 @@ padding-bottom: 150px;
     @extend %wrapper;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .flex-header-wrap {
     display: flex;
@@ -59,13 +75,14 @@ padding-bottom: 150px;
 }
 
 .toolbar {
-    background-color:#111;
-    opacity: 0.6;
+    position: static;
+    background-color: transparent;
     padding: 10px 0;
     transition: 0.2s;
+    z-index: 0;
 
     &:hover {
-        opacity: 1;
+        background-color: rgba(0, 0, 0, 0.55);
     }
 
     .flex-toolbar {
@@ -73,7 +90,6 @@ padding-bottom: 150px;
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        opacity: 1;
             &-item {
                 display: flex;
                 align-items: center;
@@ -89,7 +105,6 @@ padding-bottom: 150px;
                 text-decoration: none;
     
                 &:hover {
-                    text-decoration: underline;
                     cursor: pointer;
                     color: $white;
                 }
@@ -128,7 +143,6 @@ padding-bottom: 150px;
                     margin-right: 8px;
                 }
             }
-            
     }
 }
 
@@ -142,20 +156,13 @@ padding-bottom: 150px;
         margin-bottom: 44px;
         font-family: $roboto;
         line-height: 38px;
+        font-weight: $light-weight;
         font-size: 22px;
         color: $white;
     }
 
     &__more {
-        border: 4px solid transparent; 
-        padding: 15px 15px 15px 0;
-        font-family: $roboto;
-        font-weight: $bold-weight; 
-        font-size: 18px;
-        text-decoration: none;
-        color: $white;
-        transition: 0.3s;
-        z-index: 1;
+        @extend %header-buttons;
 
         &:hover {
             border: 4px solid $white;
@@ -165,3 +172,27 @@ padding-bottom: 150px;
     }
 }
 
+.nav-buttons {
+    align-self: flex-end;
+    margin: 0 auto;
+
+    &__rand, &__timer {
+        @extend %header-buttons;
+        display: block;
+        border: 4px solid rgba(255, 255, 255, 0.65);
+        padding: 27px 37px;
+        margin-bottom: 40px;
+        font-size: 40px;
+        color: rgba(255, 255, 255, 0.65); 
+
+        &:hover {
+            border: 4px solid rgba(255, 255, 255, 1);
+            color: rgba(255, 255, 255, 1);
+            cursor: pointer;
+        }
+    }
+
+    &__timer {
+        padding: 27px 95px;
+    }
+}
