--- a/dir/style/style.css
+++ b/dir/style/style.css
@@ -1,10 +1,9 @@
-@charset "UTF-8";
 .flex-wrap, .toolbar .flex-toolbar {
   max-width: 1600px;
   margin: 0 auto;
 }
 
-.additional-info__more, .nav-buttons__rand, .nav-buttons__timer {
+.additional-info__more, .nav-buttons__rand, .nav-buttons__timer, .random-content-count {
   border: 4px solid transparent;
   background-color: transparent;
   padding: 15px 15px 15px 0;
@@ -217,44 +216,96 @@
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  padding: 410px 0;
-  -webkit-box-shadow: 0 0 0 488px rgba(0, 0, 0, 0.45) inset;
-          box-shadow: 0 0 0 488px rgba(0, 0, 0, 0.45) inset;
+  padding: 200px 0 435px 0;
+  -webkit-box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
+          box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
+}
+
+.random-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .random-content-title {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 64px;
+  font-size: 65px;
   color: white;
   text-align: center;
   letter-spacing: 2.5px;
+}
+
+.random-content-count {
+  margin-top: 80px;
+  padding: 40px 40px;
+  border: 4px solid rgba(255, 255, 255, 0.65);
+  font-size: 50px;
+  color: rgba(255, 255, 255, 0.65);
+}
+
+.random-content-count:hover {
+  color: white;
+  border: 4px solid white;
+  cursor: pointer;
 }
 
 .random-content-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .random-content-form__from, .random-content-form__to {
-  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.random-content-form__from label, .random-content-form__to label {
+  font-family: "Roboto", sans-serif;
+  font-size: 65px;
+  font-weight: 700;
+  color: white;
 }
 
 .random-content-form__from input, .random-content-form__to input {
   padding: 35px 30px;
+  border: 4px solid transparent;
+  background-color: rgba(255, 255, 255, 0.4);
   text-align: center;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 65px;
+  color: #383e42;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  max-width: 220px;
+  margin-left: 20px;
 }
 
-.random-content-form__from::before {
-  content: 'До';
-  position: absolute;
-  top: 0;
-  left: -28px;
-  font-size: 54px;
+.random-content-form__from input:focus, .random-content-form__to input:focus {
+  background-color: transparent;
+  border: 4px solid white;
+}
+
+.random-content-form__from {
+  margin-right: 45px;
 }
 /*# sourceMappingURL=style.css.map */
