--- a/dir/style/style.scss
+++ b/dir/style/style.scss
@@ -209,41 +209,81 @@ padding-bottom: 150px;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    padding: 410px 0;
-    box-shadow: 0 0 0 488px rgba(0, 0, 0, 0.45) inset;
+    padding: 200px 0 435px 0;
+    box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
 
     &-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
         &-title {
             font-family: $roboto;
             font-weight: $bold-weight;
-            font-size: 64px;
+            font-size: 65px;
             color: $white;
             text-align: center;
             letter-spacing: 2.5px;
         }
 
+        &-count {
+            @extend %header-buttons;
+            margin-top: 80px;
+            padding: 40px 40px;
+            border: 4px solid rgba(255, 255, 255, 0.65);
+            font-size: 50px;
+            color: rgba(255, 255, 255, 0.65);
+
+            &:hover {
+                color: rgba(255, 255, 255, 1);
+                border: 4px solid rgba(255, 255, 255, 1);
+                cursor: pointer;
+            }
+        }
+
         &-form {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
 
             &__from,  &__to{
-                position: relative;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                
+                label {
+                    font-family: $roboto;
+                    font-size: 65px;
+                    font-weight: $bold-weight;
+                    color: $white;
+                }
                 
                 input {
                     padding: 35px 30px;
+                    border: 4px solid transparent;
+                    background-color: rgba(255, 255, 255, 0.4);
                     text-align: center;
+                    font-family: $roboto;
                     font-weight: $bold-weight;
                     font-size: 65px;
+                    color: rgba(56, 62, 66, 1);
+                    transition: 0.2s;
+                    max-width: 220px;
+                    margin-left: 20px;
+
+                    &:focus {
+                        background-color: transparent;
+                        border: 4px solid $white;
+                    }
+
                 }
             }
 
-            &__from::before {
-                content: 'До';
-                position: absolute;
-                top: 0;
-                left: -28px;
-                font-size: 54px;
+            &__from {
+                margin-right: 45px;
             }
+
         }
     }
+
+
 }
