--- a/dir/style/style.scss
+++ b/dir/style/style.scss
@@ -30,7 +30,7 @@ background-repeat: no-repeat;
 background-position: center center;
 background-attachment: fixed;
 background-size: cover;
-box-shadow:0 0 0 353px rgba(0, 0, 0, 0.45) inset;
+box-shadow:0 0 0 524px rgba(0, 0, 0, 0.45) inset;
 padding-bottom: 150px;
 }
 
@@ -38,14 +38,9 @@ padding-bottom: 150px;
     @extend %wrapper;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap
-    // align-items: center;
+    align-items: center;
+    padding: 100px 0;
 
-    .flex-header-wrap {
-    display: flex;
-    // flex-direction: column;
-    justify-content: space-around;
-    }
 }
 
 .flex-header {
@@ -151,17 +146,23 @@ padding-bottom: 150px;
 
 
 .additional-info {
-    max-width: 600px;
-    height: 200px;
+    max-width: 660px;
 
     &__text {
-        margin-bottom: 44px;
         font-family: $roboto;
         line-height: 38px;
         font-weight: $light-weight;
         font-size: 22px;
         color: $white;
+
+        span {
+            font-weight: 400;
+        }
     }
+
+    &__text:nth-child(2) {
+        margin-bottom: 44px;
+    } 
 
     &__more {
         @extend %header-buttons;
@@ -175,17 +176,17 @@ padding-bottom: 150px;
 }
 
 .nav-buttons {
+    @extend %wrapper;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
+    justify-content: space-around;
+    align-items: flex-end;
+    height: 180px;
 
     &__rand, &__timer {
         @extend %header-buttons;
         display: block;
         border: 4px solid rgba(255, 255, 255, 0.65);
         padding: 27px 37px;
-        margin-bottom: 40px;
         font-size: 40px;
         color: rgba(255, 255, 255, 0.65); 
 
