--- a/dir/style/_timer.scss
+++ b/dir/style/_timer.scss
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    padding: 350px 0 350px 0;
+    padding: 250px 0 250px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,7 +26,7 @@
         text-align: center;
         color: rgba(56, 62, 66, 0.65);
         padding: 35px 35px;
-        margin: 55px 0 100px 0;
+        margin-bottom: 50px;
         transition: 0.3s;
 
         &:hover {
