--- a/dir/style/style.css
+++ b/dir/style/style.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
 }
 
-.additional-info__more, .nav-buttons__rand, .nav-buttons__timer, .random-content-count {
+.additional-info-buttom__more, .nav-buttons__rand, .nav-buttons__timer, .random-content-count {
   border: 4px solid transparent;
   background-color: transparent;
   padding: 15px 15px 15px 0;
@@ -54,7 +54,7 @@
 }
 
 .flex-header-logo {
-  margin-top: 8px;
+  margin-top: 6px;
   margin-right: 65px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -62,7 +62,7 @@
 }
 
 .flex-header-logo a img {
-  width: 80px;
+  width: 85px;
 }
 
 .flex-header-title h1 {
@@ -149,11 +149,14 @@
 }
 
 .additional-info {
-  max-width: 660px;
+  width: 660px;
 }
 
 .additional-info__text {
+  opacity: 0;
   font-family: "Roboto", sans-serif;
+  -webkit-transition: 1s;
+  transition: 1s;
   line-height: 38px;
   font-weight: 300;
   font-size: 22px;
@@ -168,7 +171,13 @@
   margin-bottom: 44px;
 }
 
-.additional-info__more:hover {
+.additional-info-buttom {
+  -webkit-transition: 1s;
+  transition: 1s;
+  opacity: 0;
+}
+
+.additional-info-buttom__more:hover {
   border: 4px solid white;
   cursor: pointer;
   padding: 15px 15px;
@@ -216,7 +225,7 @@
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  padding: 350px 0 350px 0;
+  padding: 250px 0 250px 0;
   -webkit-box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
           box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
 }
@@ -314,7 +323,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  padding: 350px 0 350px 0;
+  padding: 250px 0 250px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -345,7 +354,7 @@
   text-align: center;
   color: rgba(56, 62, 66, 0.65);
   padding: 35px 35px;
-  margin: 55px 0 100px 0;
+  margin-bottom: 50px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
