--- a/dir/style/_random.scss
+++ b/dir/style/_random.scss
@@ -67,11 +67,19 @@
                     max-width: 220px;
                     margin-left: 20px;
 
-                    &:focus {
-                        background-color: transparent;
-                        border: 4px solid $white;
-                    }
+                    // &:focus {
+                    //     background-color: transparent;
+                    //     border: 4px solid $white;
+                    // }
+                }
 
+                .focus {
+                    background-color: transparent;
+                    border: 4px solid $white;
+                }
+
+                .inc-focus {
+                    border: 4px solid rgba(229, 43, 80, 0.5);
                 }
             }
 
