--- a/dir/style/_timer.scss
+++ b/dir/style/_timer.scss
@@ -1,8 +1,9 @@
 .timer {
-    background-image: url(../images/random-back2.png);
+    background-image: url(../images/watch.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
     padding: 250px 0 250px 0;
     display: flex;
     flex-direction: column;
@@ -14,24 +15,24 @@
         font-size: 65px;
         text-align: center;
         letter-spacing: 2.5px;
-        color: $atracit;
+        color: $white;
     }
 
     &-start {
-        border: 4px solid rgba(56, 62, 66, 0.65);
+        border: 4px solid rgba(255, 255, 255, 0.65);
         background-color: transparent;
         font-family: $roboto;
         font-weight: $bold-weight;
         font-size: 55px;
         text-align: center;
-        color: rgba(56, 62, 66, 0.65);
+        color: rgba(255, 255, 255, 0.65);
         padding: 35px 35px;
         margin-bottom: 50px;
         transition: 0.3s;
 
         &:hover {
-            color: rgba(56, 62, 66, 1);
-            border: 4px solid rgba(56, 62, 66, 1);
+            color: rgba(255, 255, 255, 1);
+            border: 4px solid rgba(255, 255, 255, 1);
             cursor: pointer;
         }
     }
@@ -48,6 +49,7 @@
             font-size: 75px;
             text-align: center;
             width: 178px;
+            color: $white;
         }
 
         .seconds {
@@ -84,7 +86,7 @@
             font-weight: $bold-weight;
             font-size: 40px;
             margin-bottom: 15px;
-            color: $atracit;
+            color: $white;
             }
 
             .hours-setter, .minutes-setter, .seconds-setter {
@@ -100,7 +102,7 @@
             
             .timer-setting__hours, .timer-setting__minutes, .timer-setting__seconds {
                 border: 4px solid transparent;
-                background-color: rgba(250, 235, 215, 0.60);
+                background-color: rgba(145, 145, 146, 0.3);
                 transition: 0.3s;
                 padding: 35px 35px;
                 font-family: $roboto;
@@ -108,15 +110,27 @@
                 font-size: 40px;
                 max-width: 100px;
                 text-align: center;
-                color: $atracit;
-
-                &:focus {
-                    border: 4px solid rgba(213, 213, 213, 1);
-                    background-color: transparent;
-                }
-
+                color: $white;
             }
-
     }
 
+    .focus {
+        background-color: transparent;
+        border: 4px solid rgba(213, 213, 213, 1);
+    }
+    
+    .inc-focus {
+        border: 4px solid rgba(229, 43, 80, 0.5);
+        background-color: transparent;
+    }
+    
+    .inc-blur {
+        border: 4px solid rgba(229, 43, 80, 0.5);
+        background-color: rgba(145, 145, 146, 0.3);
+    }
 }
+
+.warning {
+    @extend %warning;
+}
+
