--- a/dir/style/style.css
+++ b/dir/style/style.css
@@ -4,6 +4,30 @@
   margin: 0 auto;
 }
 
+.random-content .warning, .warning {
+  margin-top: 15px;
+  height: 36.8px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  color: #e52b50;
+  font-size: 32px;
+}
+
+.random-content-form__from .focus, .random-content-form__to .focus {
+  background-color: transparent;
+  border: 4px solid white;
+}
+
+.random-content-form__from .inc-focus, .random-content-form__to .inc-focus {
+  border: 4px solid rgba(229, 43, 80, 0.5);
+  background-color: transparent;
+}
+
+.random-content-form__from .inc-blur, .random-content-form__to .inc-blur {
+  border: 4px solid rgba(229, 43, 80, 0.5);
+  background-color: rgba(145, 145, 146, 0.3);
+}
+
 .additional-info-buttom__more, .nav-buttons__rand, .nav-buttons__timer, .random-content-count {
   border: 4px solid transparent;
   background-color: transparent;
@@ -213,6 +237,13 @@
   padding: 27px 95px;
 }
 
+.separator {
+  background-image: url(../images/separator.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100px;
+}
+
 .random {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -220,7 +251,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-image: url(../images/random-back2.png);
+  background-image: url(../images/telephone.jfif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -253,7 +284,7 @@
 }
 
 .random-content-count {
-  margin-top: 80px;
+  margin-top: 65px;
   padding: 40px 40px;
   border: 4px solid rgba(255, 255, 255, 0.65);
   font-size: 50px;
@@ -273,6 +304,8 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .random-content-form__from, .random-content-form__to {
@@ -297,25 +330,16 @@
 .random-content-form__from input, .random-content-form__to input {
   padding: 35px 30px;
   border: 4px solid transparent;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(145, 145, 146, 0.3);
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 65px;
-  color: #383e42;
+  color: white;
   -webkit-transition: 0.2s;
   transition: 0.2s;
   max-width: 220px;
   margin-left: 20px;
-}
-
-.random-content-form__from .focus, .random-content-form__to .focus {
-  background-color: transparent;
-  border: 4px solid white;
-}
-
-.random-content-form__from .inc-focus, .random-content-form__to .inc-focus {
-  border: 4px solid rgba(229, 43, 80, 0.5);
 }
 
 .random-content-form__from {
@@ -323,10 +347,12 @@
 }
 
 .timer {
-  background-image: url(../images/random-back2.png);
+  background-image: url(../images/watch.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  -webkit-box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
+          box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
   padding: 250px 0 250px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -346,17 +372,17 @@
   font-size: 65px;
   text-align: center;
   letter-spacing: 2.5px;
-  color: #383e42;
+  color: white;
 }
 
 .timer-start {
-  border: 4px solid rgba(56, 62, 66, 0.65);
+  border: 4px solid rgba(255, 255, 255, 0.65);
   background-color: transparent;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 55px;
   text-align: center;
-  color: rgba(56, 62, 66, 0.65);
+  color: rgba(255, 255, 255, 0.65);
   padding: 35px 35px;
   margin-bottom: 50px;
   -webkit-transition: 0.3s;
@@ -364,8 +390,8 @@
 }
 
 .timer-start:hover {
-  color: #383e42;
-  border: 4px solid #383e42;
+  color: white;
+  border: 4px solid white;
   cursor: pointer;
 }
 
@@ -386,6 +412,7 @@
   font-size: 75px;
   text-align: center;
   width: 178px;
+  color: white;
 }
 
 .timer-result .seconds {
@@ -426,7 +453,7 @@
   font-weight: 700;
   font-size: 40px;
   margin-bottom: 15px;
-  color: #383e42;
+  color: white;
 }
 
 .timer-setting .hours-setter, .timer-setting .minutes-setter, .timer-setting .seconds-setter {
@@ -449,7 +476,7 @@
 
 .timer-setting .timer-setting__hours, .timer-setting .timer-setting__minutes, .timer-setting .timer-setting__seconds {
   border: 4px solid transparent;
-  background-color: rgba(250, 235, 215, 0.6);
+  background-color: rgba(145, 145, 146, 0.3);
   -webkit-transition: 0.3s;
   transition: 0.3s;
   padding: 35px 35px;
@@ -458,11 +485,21 @@
   font-size: 40px;
   max-width: 100px;
   text-align: center;
-  color: #383e42;
+  color: white;
 }
 
-.timer-setting .timer-setting__hours:focus, .timer-setting .timer-setting__minutes:focus, .timer-setting .timer-setting__seconds:focus {
-  border: 4px solid #d5d5d5;
+.timer .focus {
   background-color: transparent;
+  border: 4px solid #d5d5d5;
+}
+
+.timer .inc-focus {
+  border: 4px solid rgba(229, 43, 80, 0.5);
+  background-color: transparent;
+}
+
+.timer .inc-blur {
+  border: 4px solid rgba(229, 43, 80, 0.5);
+  background-color: rgba(145, 145, 146, 0.3);
 }
 /*# sourceMappingURL=style.css.map */
