--- a/dir/style/style.scss
+++ b/dir/style/style.scss
@@ -5,10 +5,35 @@ $light-weight: 300;
 $bold-weight: 700;
 $gray: #ababab;
 $atracit: rgba(56, 62, 66, 1);
+$red: 4px solid rgba(229, 43, 80, 0.5);
 
 %wrapper {
     max-width: 1600px;
     margin: 0 auto;
+}
+
+%warning { 
+        margin-top: 15px;
+        height: 36.8px;
+        font-family: $roboto;
+        font-weight: $bold-weight;
+        color: rgba(229, 43, 80, 1);
+        font-size: 32px;
+}
+
+%focus {
+    background-color: transparent;
+    border: 4px solid $white;
+}
+
+%inc-focus {
+    border: 4px solid rgba(229, 43, 80, 0.5);
+    background-color: transparent;
+}
+
+%inc-blur {
+    border: 4px solid rgba(229, 43, 80, 0.5);
+    background-color: rgba(145, 145, 146, 0.3);
 }
 
 %header-buttons {
@@ -206,6 +231,13 @@ padding-bottom: 150px;
     &__timer {
         padding: 27px 95px;
     }
+}
+
+.separator {
+    background-image: url(../images/separator.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100px;
 }
 
 @import 'random';
