--- a/dir/style/_timer.scss
+++ b/dir/style/_timer.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     background-attachment: fixed;
     box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
-    padding: 250px 0 250px 0;
+    padding: 200px 0 200px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,10 +23,10 @@
         background-color: transparent;
         font-family: $roboto;
         font-weight: $bold-weight;
-        font-size: 55px;
+        font-size: 45px;
         text-align: center;
         color: rgba(255, 255, 255, 0.65);
-        padding: 35px 35px;
+        padding: 30px 30px;
         margin-bottom: 50px;
         transition: 0.3s;
 
@@ -56,6 +56,10 @@
             margin-right: 0;
         }
 
+        .gone {
+            color: rgba(229, 43, 80, 1);
+        }
+
         .hours::after {
             display: block;
             content: "Часов";
@@ -78,7 +82,6 @@
     &-setting {
         display: flex;
         justify-content: space-between;
-        margin: 65px 0;
     
             label {
             display: block;
