--- a/dir/style/_random.scss
+++ b/dir/style/_random.scss
@@ -6,7 +6,7 @@
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    padding: 250px 0 250px 0;
+    padding: 230px 0 230px 0;
     box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
 
     &-content {
@@ -25,7 +25,6 @@
 
         &-count {
             @extend %header-buttons;
-            // margin-top: 65px;
             padding: 30px 30px;
             border: 4px solid rgba(255, 255, 255, 0.65);
             font-size: 45px;
@@ -90,9 +89,24 @@
 
         }
 
-            .warning {
-                @extend %warning;
+        .warning {
+            @extend %warning;
+        }
+        
+        .random-result-block {
+            height: 255px;
+            .random-result {
+                display: none;
+                font-family: $roboto;
+                font-weight: $bold-weight;
+                font-size: 130px;
+                color: $white;
+                margin-top: 105px;
             }
+        }
+
+        
+
     }
 
 
