--- a/dir/style/style.css
+++ b/dir/style/style.css
@@ -256,7 +256,7 @@
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  padding: 250px 0 250px 0;
+  padding: 230px 0 230px 0;
   -webkit-box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
           box-shadow: 0 0 0 720px rgba(0, 0, 0, 0.45) inset;
 }
@@ -343,6 +343,19 @@
 
 .random-content-form__from {
   margin-right: 45px;
+}
+
+.random-content .random-result-block {
+  height: 255px;
+}
+
+.random-content .random-result-block .random-result {
+  display: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 130px;
+  color: white;
+  margin-top: 105px;
 }
 
 .timer {
